--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -110,7 +110,7 @@
         <div class="flex-auto -mt-px pt-4 sm:pt-6">
             <div class="w-full max-w-screen-xl mx-auto">
                 <!-- <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6 w-full min-w-0"> -->
-                    <advert></advert>
+                    <!-- <advert></advert> -->
                 <!-- </div> -->
             </div>
         </div>
